10-Workspaces/3-ec2.tf
# Create a Key-Pair locally
resource "aws_key_pair" "ssh-key" {
  key_name = "boutique-key-${terraform.workspace}"
  public_key = var.public_key_data
  #public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCy/OZzbwnnyr/lzEgyuitg/Oaspiw6TL8l2FXlbr9Y+XoVtvKo0OQcsRfl9+ARrxMJ1mvd/uJINI1pUs9PMS2B44Gu0y8Ejh1gkl9fHKWi5vb8eZXPt4NCS/E6N5F6tmRODvilYrDmgWPh47C2vioHUW4uh2v3cO70DWIST/W4Gc/mgWSjYVIe+1nD3HIBIdNZoXRn9qiR5kjPW6lzqJaRoHVqWR5IhEECGk/5D4HjRiHWhnUNDjv218WxbEcw4McCFdJIN6kxoPIlxgtIDGCmg+wlAOaUxEmTU/Sov6dxx0Z8FrkBUu8IkjDU/TS/ZdqWartm45SOe+AaPYEgkKAYqyugjMLDX5jYOnYtKV3orEpzQ1MsrhHN8w4Xqp5S5BUg5KdMuk/BueBHCCfXJYFq61++CsIqR83IG2Ar02EEaUiLfsStIZmHNQh1XH6 [...]
  #public_key = file("~/.ssh/id_rsa.pub")
}

# Lets Create a EC2 Instance
resource "aws_instance" "tf-ec2" {
  ami           = var.ami_id
  instance_type = var.instance_type
  # default , instance 2
  # non-default, instance 1
  # condition based instance count
  count = terraform.workspace == "default" ? 2 : 1
  subnet_id = aws_subnet.tf-prod-pub-subent-1.id #resource.resource_local_name.id
  vpc_security_group_ids = [aws_security_group.tf-sg.id]
  tags = {
    Name = "${terraform.workspace}-${count.index}" #index starts with 0
  }
  key_name = aws_key_pair.ssh-key.key_name
  # File Function
  user_data = file("entry.sh")
}
